Update command line -Xplugin usage instructions for Java 9, 10, and 11